--- a/src/home/custom-shop/csb.css
+++ b/src/home/custom-shop/csb.css
@@ -1,27 +1,30 @@
-  .step1buildheader h1 {
-    text-align: center;
-    font-weight: 300;
-    color: white;
-  }
-  .select-nav-bar-build-shop {
-    padding: 10px 20px;
-    border-radius: 15px;
-    border: 2px solid #ffffff;
-    background-color: #ffffff;
-    color: #000000;
-    display: flex; /* Create a flex container */
-    justify-content: center; /* Center content horizontally */
-    align-items: center; /* Center content vertically */
-    margin-top: 10px;
-    margin-bottom: 150px;
-  }
-  .select-nav-bar-build-shop:hover {
-    background-color: transparent;
-    transition: 0.3s;
-    border-radius: 25px;
-    color: rgb(255, 255, 255);
-    border: 2px solid #ffffff;
-  }
+.step1buildheader h1 {
+  text-align: center;
+  font-weight: 300;
+  color: white;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.select-nav-bar-build-shop {
+  padding: 10px 20px;
+  border-radius: 15px;
+  border: 2px solid #ffffff;
+  background-color: #ffffff;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 20px 150px; /* Updated margin */
+}
+
+.select-nav-bar-build-shop:hover {
+  background-color: transparent;
+  transition: 0.3s;
+  border-radius: 25px;
+  color: rgb(255, 255, 255);
+  border: 2px solid #ffffff;
+}
   .formheadertextcustomshop {
     text-align: center;
   }
