--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -1,66 +1,143 @@
-/* Sidebar.css */
-.sidebar {
-  height: 100vh; /* Full viewport height */
-  width: 140px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: black;
-  overflow-x: hidden;
-  padding-top: 20px;
-  border-right: 1px solid white;
-  text-align: center;
+/* App.css */
+.navbar-dropment-main-page {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-start;
-}
-.logout-btn-mainpage {
-  background-color: transparent;
-  color: red;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
+  padding: 20px;
+  background-color: #000000;
+  color: #fff;
+  border-bottom: 1px solid white;
 }
 
-.login-btn-mainpage {
-  background-color: transparent;
-  color: green;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.sidebar img {
+.logo-dropment-main-page {
   width: 50px;
-  margin-bottom: 50px;
+}
+.big-screen-nav-bar-dropment-main-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px; /* Adjust the height as needed */
 }
 
-.sidebar p {
-  padding: 10px;
-  margin: 0;
-  width: 100%;
-  color: white;
+.big-screen-nav-bar-dropment-main-page button {
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  cursor: pointer;
-  margin-top: 10px;
 }
 
-.sidebar p:hover {
+.big-screen-nav-bar-dropment-main-page button img {
+  margin-left: 5px; /* Adjust the spacing between text and image */
+  width: 20px; /* Adjust image size as needed */
+  height: 20px; /* Adjust image size as needed */
+}
+
+.big-screen-nav-bar-dropment-main-page button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.menu {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 80px; /* Adjust as needed */
+  right: 0;
   background-color: #333;
-}
-.notification-popup {
-  position: fixed;
-  top: 0;
-  right: -300px; /* Initially hide notification off-screen */
-  width: 300px;
-  height: 100vh;
-  transition: right 0.3s ease-in-out; /* Apply transition effect */
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
-.notification-popup.show {
-  right: 0; /* Slide the notification to the visible position */
+.menu.open {
+  display: flex;
+}
+
+.menu button {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px; /* Adjust spacing between buttons */
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.menu button img {
+  margin-left: 5px; /* Adjust spacing between text and image */
+  width: 20px; /* Adjust image size as needed */
+  height: 20px; /* Adjust image size as needed */
+}
+
+.menu button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.hamburger-dropment-main-page {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.hamburger-dropment-main-page .line {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger-dropment-main-page.open .line:nth-child(1) {
+  transform: translateY(5px) rotate(45deg);
+}
+
+.hamburger-dropment-main-page.open .line:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-dropment-main-page.open .line:nth-child(3) {
+  transform: translateY(-5px) rotate(-45deg);
+}
+
+@media (max-width: 768px) {
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    background-color: #000000;
+    width: 100%;
+    padding: 20px;
+    border-bottom: 1px solid white;
+    box-sizing: border-box;
+    display: none;
+  }
+
+  .menu.open {
+    display: flex;
+  }
+
+  .hamburger-dropment-main-page {
+    display: flex;
+  }
+  .big-screen-nav-bar-dropment-main-page {
+    display: none;
+  }
 }
 body {
   background-color: black;
