--- a/src/home/search/search.css
+++ b/src/home/search/search.css
@@ -149,29 +149,7 @@
 }
 
 
-/* Style for the search bar */
-.inpsearchbar {
-  margin: 20px auto;
-}
 
-.inpsearchbar input {
-  padding: 8px;
-  font-size: 16px;
-  border: 1px solid #333;
-  border-radius: 4px;
-  width: 50%;
-  background-color: black;
-}
-
-.inpsearchbar button {
-  padding: 8px 16px;
-  font-size: 16px;
-  background-color: transparent;
-  color: #fff;
-  border: 1px solid #333;
-  border-radius: 4px;
-  cursor: pointer;
-}
 .user-shop-section {
   text-align: center;
 }
@@ -260,4 +238,43 @@
     color: white;
   }
 
+}
+
+/* Base styles */
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+  border: none; /* Darker border color */
+  border-radius: 6px;
+}
+
+.search-input {
+  flex: 1;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #444; /* Darker input background */
+  color: #eee; /* Lighter text color */
+}
+
+.search-button {
+  margin-left: 10px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: #333; /* Accent color */
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* Media query for larger screens */
+@media (min-width: 768px) {
+  .search-container {
+    max-width: 500px;
+    margin: 0 auto;
+  }
 }
