--- a/src/home/passwordreset/passwordreset.css
+++ b/src/home/passwordreset/passwordreset.css
@@ -26,17 +26,18 @@
   }
   
   .password-reset-form button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
+    background-color: transparent;
+    border: 2px solid #fff;
+    border-radius: 15px;
+    padding: 16px 25px;
+    color: white;
     cursor: pointer;
-    font-size: 16px;
   }
   
   .password-reset-form button:hover {
-    background-color: #45a049;
+    background-color: #fff;
+    color: black;
+    transition: 0.3s;
   }
 
   .reset-password-container {
@@ -71,18 +72,14 @@
   }
   
   .reset-password-container  button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
+    background-color: transparent;
+    border: 2px solid #fff;
+    border-radius: 15px;
+    padding: 16px 25px;
+    color: white;
     cursor: pointer;
-    font-size: 16px;
   }
   
-  .reset-password-container  button:hover {
-    background-color: #45a049;
-  }
   
   .reset-password-container  p {
     margin-top: 15px;
