--- a/src/home/search/search.css
+++ b/src/home/search/search.css
@@ -8,15 +8,17 @@
 .filter-buttons button {
   padding: 8px 16px;
   margin: 0 5px;
-  background-color: #0056b3; /* Changed background color */
+  background-color: transparent; /* Changed background color */
   color: #fff;
-  border: none;
+  border: 1px solid white;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .filter-buttons button.active {
-  background-color: #003366; /* Darker active background color */
+  background-color: white; /* Darker active background color */
+  color: black;
+  text-decoration: none;
 }
 
 /* Results container styles */
@@ -103,7 +105,6 @@
 .header-search {
   padding: 10px;
   text-align: center; /* Center the content */
-  background-color: #333; /* Darker background */
   color: #fff; /* White text color */
 }
 
@@ -114,6 +115,14 @@
 
 .header-left {
   margin-right: auto; /* Pushes the content to the extreme left */
+}
+
+.header-left button {
+  background-color: white;
+  border-radius: 15px;
+  border: 1px solid white;
+  color: black;
+  padding: 10px 20px;
 }
 
 .header-right {
