--- a/src/home/search/search.css
+++ b/src/home/search/search.css
@@ -42,6 +42,11 @@
   text-align: center; /* Center user content */
 }
 
+.user-profile-pic-search-result {
+  width: 120px;
+  border-radius: 50%;
+}
+
 .user-post-username-search-result {
   font-size: 1.2rem;
   color: #fff; /* White username color */
@@ -75,7 +80,9 @@
   margin: 0 auto; /* Center the box horizontally */
   text-align: center; /* Center shop content */
 }
-
+.shop-logo-search-result {
+  width: 200px;
+}
 .shop-name-link-search-result {
   font-size: 1.2rem;
   color: #fff; /* White shop name color */
@@ -91,6 +98,9 @@
   box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1); /* Invert box shadow */
   margin: 0 auto; /* Center the box horizontally */
   text-align: center; /* Center product content */
+}
+.product-img-search-result img {
+  width: 250px;
 }
 
 .product-title-search-result h2 {
