--- a/src/home/search/search.css
+++ b/src/home/search/search.css
@@ -166,7 +166,7 @@
   margin-bottom: 10px;
   width: 80%;
   background-color: white; /* Darker background */
-  color: #fff; /* White text color */
+  color: black; /* White text color */
 }
 
 .search-button {
