--- a/src/home/myprofile/my-profile-edit.css
+++ b/src/home/myprofile/my-profile-edit.css
@@ -91,4 +91,114 @@
 }
 
 
-/*profile settings*/
+/* Switch.css */
+.settings-container {
+  margin: 0 auto;
+  max-width: 600px;
+}
+
+.settings-header header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.settings-header h2 {
+  margin: 0;
+}
+
+.button-wrapper {
+  display: flex;
+}
+
+.back-button, .edit-button {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 15px;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.back-button:hover, .edit-button:hover {
+  background-color: #555;
+  cursor: pointer;
+}
+
+.section-1-settings {
+  padding: 20px 0;
+}
+
+.privacy-option {
+  margin-bottom: 20px;
+}
+
+.privacy-option p {
+  margin: 0;
+}
+
+.switch-container {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 24px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+.switch input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.switch input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+
+.section-1-settings h4 {
+  color: #535353;
+}
