--- a/src/home/myprofile/my-profile-edit.css
+++ b/src/home/myprofile/my-profile-edit.css
@@ -126,6 +126,7 @@
 .back-button:hover, .edit-button:hover {
   background-color: #555;
   cursor: pointer;
+  margin: 5px 10px;
 }
 
 .section-1-settings {
