--- a/src/home/adminview/adminview.css
+++ b/src/home/adminview/adminview.css
@@ -865,3 +865,15 @@
   cursor: pointer;
 }
 
+.note-section-prod-edit {
+  background-color: #f2f2f2;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+.note-section-prod-edit p {
+  font-size: 16px;
+  color: #333;
+}
